--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/appTitleTextView"
+        android:id="@+id/app_title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/locationTextView"
+        android:id="@+id/location_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
@@ -40,7 +40,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textAlignment="viewStart"
-        app:layout_constraintTop_toBottomOf="@id/appTitleTextView"
+        app:layout_constraintTop_toBottomOf="@id/app_title_text_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
